--- a/Styles/about.css
+++ b/Styles/about.css
@@ -17,26 +17,33 @@
 	font-size: 2.5vh;
 }
 
-#sprites {
-	width: 100%;
-	height: 50%;
+#profile {
+	padding-left: 40.7%;
+	padding-top: 3%;
 }
 
-#sprites img {
+#profile-image {
 	display: inline-block;
-	padding-right: 6%;
 }
 
-#selector {
+#profile p {
+	position: fixed;
+	padding-top: 5%;
+	padding-left: 2%;
 	font-family: 'Unibody 8 Pro';
-	text-align: center;
 	vertical-align: center;
-	padding-top: 10%;
+	display: inline-block;
 }
 
-#sprites #contact {
-	padding-left: 10%;
-	padding-bottom: 2%;
+#website-info {
+	font-size: 1vh;
+}
+
+#about {
+	font-family: 'Unibody 8 Pro';
+	width: 40%;
+	padding-left: 30%;
+	padding-top: 2%;
 }
 
 #navigation {
